<resources>
    <string name="app_name">Zippy</string>
    <string name="welcome">Bem vindo(a)\n ao Zippy</string>
    <string name="email_hint">Email</string>
    <string name="logodescricao">Zippy Logo</string>
    <string name="terms_conditions">Ao continuar, você concorda com nossos Termos de Serviço e cofirma que leu nossa Politica de Privacidade</string>
    <string name="criar_senha">Crie sua senha</string>
    <string name="confirmar_senha">Confirme sua senha</string>
    <string name="quase_la">Estamos quase lá..</string>
    <string name="identidade" translatable="false">Insira sua identidade</string>
    <string name="fim">Finalizar</string>
    <string name="entrar">Olá novamente!\nEntre para prosseguir!</string>
    <string name="senha_hint">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="identidade_hint" translatable="false">Identidade</string>
    <string name="btn_continuar">Continuar</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="txtOnclick_RedefinirSenha"><u>Redefina Aqui!</u></string>
    <string name="redefinir_titulo">Redefina sua Senha</string>
    <string name="inserir_email_esqueceu_senha">Insira seu email cadastrado na Zippy</string>
    <string name="enviar_esqueceuSenha">Enviar</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="txt_btn_carousel">Confira</string>
    <string name="carousel_image_description">carousel_imaage</string>
    <string name="title_perfil_BB">Perfil</string>
    <string name="title_chat_BB">Chat</string>
    <string name="navigation_drawer_open">Abrir Gaveta</string>
    <string name="navigation_drawer_close">Fechar Gaveta</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="ucrop_crop">Cortar</string>
    <string name="ucrop_label_edit_photo">Editar Foto</string>
    <string name="ucrop_menu_crop">Cortar</string>
    <string name="ucrop_rotate">Girar</string>
    <string name="ucrop_scale">Aumentar</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="faq_card_home">Possui alguma dúvida? Consulte nosso FAQ</string>
    <string name="btn_faq_card_home">Clique aqui!</string>
    <string name="faça_solicitação">Buscando algo especifico?\nFaça sua solicitação!</string>
    <string name="fazer_post">Fazer Post</string>
    <string name="content_Descripton">LOGO</string>
    <string name="config_drawer">Configurações</string>
    <string name="suporte_drawer">Suporte\n</string>
    <string name="sair_drawer">Sair\n</string>
    <string name="solicita_drawer">Solicitações</string>
    <string name="fazer_post_drawer">Fazer Post</string>
    <string name="slogan">Seu app de compras internacionais\n</string>
    <string name="ver_perfil_drawer">Ver seu perfil</string>
    <string name="criar_nome">Nos conte mais sobre você</string>
    <string name="nome">Insira seu nome</string>
    <string name="dataNasc_hint">13/04/2004</string>
    <string name="lbl_dataNasc">Insira sua data de nascimento</string>
    <string name="lblInserirTelefone">Insira seu telefone</string>
    <string name="telefone_hint">+55 (11) 99999-9999</string>
    <string name="nome_hint">João Aparecido dos Santos</string>
    <string name="sobrenome">Insira seu sobrenome</string>
    <string name="configuracoes_titulo">Configurações</string>
    <string name="personalizacao_titulo_config">Personalização</string>
    <string name="habilitar_modo_escuro_config">Habilitar Modo Escuro</string>
    <string name="notificacoes_config">Notificações</string>
    <string name="idioma_do_app_config">Idioma do App</string>
    <string name="minha_conta_config">Conta e Segurança</string>
    <string name="meus_dados_config">Meus Dados</string>
    <string name="central_de_ajuda_config">Central de Ajuda</string>
    <string name="meus_enderecos_config">Meus Endereços</string>
    <string name="suporte_config">Suporte</string>
    <string name="nossa_politica_config">Nossa Politica</string>
    <string name="denunciar_config">Denunciar Usuário</string>
    <string name="meus_pagamentos_config">Meus Pagamentos</string>
    <string name="meu_perfil_titulo">Meu Perfil</string>
    <string name="ola_teste">Olá Usuário</string>
    <string name="email_teste_perfil">*****@gmail.com</string>
    <string name="btn_pedidos_perfil">Pedidos</string>
    <string name="btn_solicitacoes_perfil">Solicitações</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="pagamento_perfil">Pagamento</string>
    <string name="avaliacao_viajante_perfil">Avaliação Viajante</string>
    <string name="manter_login_check">Manter Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_dialog">Processando...Aguarde</string>
    <string name="speakableText_inserirTelefone">Campo Inserir Telefone</string>
    <string name="speakableText_dataNascismento">Campo Inserir Data de Nascimento</string>
    <string name="speakableText_inserirNome">Campo Inserir Nome</string>
    <string name="speakableText_inserirSobrenome">Campo Inserir Sobrenome</string>
    <string name="lbl_insiraEmail">Entre ou Cadastre-se abaixo:</string>
    <string name="titulo_editar_perfil">Editar Perfil</string>
    <string name="titulo_editar_conta">Minha Conta</string>
    <string name="titulo_criar_post">Criar Postagem</string>
    <string name="lbl_editarNome">Nome:</string>
    <string name="lbl_editarSobrenome">Sobrenome:</string>
    <string name="lbl_editarEmail">Email:</string>
    <string name="lbl_dataNascimento">Data de Nascimento:</string>
    <string name="lbl_editarTelefone">Telefone:</string>
    <string name="lbl_editarIdentidade">Identidade:</string>
    <string name="lbl_novaSenha">Nova Senha:</string>
    <string name="btn_salvarDados">Salvar</string>
    <string name="lbl_editarPerfil">Editar Perfil</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_edite_sua_senha">Edite sua Senha:</string>
    <string name="lbl_edite_seu_nome">Edite seu Nome:</string>
    <string name="lbl_atualize_sua_senha">Crie uma nova senha:</string>
    <string name="lbl_edite_seu_telefone">Edite seu Telefone:</string>
    <string name="lbl_edite_seu_email">Edite seu Email:</string>
    <string name="lbl_edite_sua_dtaNasc">Edite sua data de nascimento:</string>
    <string name="perfil_nome">%1$s %2$s</string>
    <string name="edite_seu_nometestee">Edite seu Nome:</string>
    <string name="title_activity_editar_conta">activityEditarConta</string>
    <string name="lbl_senhaEdit">********</string>
    <string name="dataEdit_error">Insira uma data válida</string>
    <string name="subtitulo_criar_post">Insira as informações sobre o que você deseja</string>
    <string name="lbl_nomePost">Nome do Produto: *</string>
    <string name="lbl_valorPost">Valor do Produto*</string>
    <string name="lbl_linkPost">Link de referencia: *</string>
    <string name="lbl_addImg">Adicione uma foto do produto</string>
    <string name="lbl_paisOrigemPost">País de Origem: *</string>
    <string name="lbl_cidadePost">Cidade: *</string>
    <string name="lbl_estadoPost">Estado: *</string>
    <string name="lbl_paisDestinoPost">País de Destino: *</string>
    <string name="lbl_cidadeDestinoPost">Cidade: *</string>
    <string name="lbl_estadoDestinoPost">Estado: *</string>
    <string name="lbl_checkCaixa">Deseja o produto com Caixa?</string>
    <string name="hint_nomePost">Macbook Pro 14\"</string>
    <string name="hint_linkPost">apple.com/shop/produto</string>
    <string name="hint_precoPost">$3200</string>
    <string name="hint_PaisOrigemPost">Estados Unidos</string>
    <string name="hint_cidadeOrigemPost">Nova York</string>
    <string name="hint_estadoOrigemPost">NY</string>
    <string name="hint_PaisDestinoPost">Brasil</string>
    <string name="hint_cidadeDestinoPost">São Paulo</string>
    <string name="hint_estadoDestinoPost">SP</string>
    <string name="text_uploadImg">Insira uma imagem</string>
    <string name="subtitulo_selecionar_destino">Nos conte onde você está\n e para onde vai..</string>
    <string name="titulo_selecionar_destino">Solicitações</string>
    <string name="lbl_erroPosts">Nenhum Pedido Encuntrado!</string>
    <string name="titulo_Pedidos">Pedidos Disponiveis</string>
    <string name="cd_voltarPedidos">Botão voltar tela anterior</string>
    <string name="cd_face_pedidos">Imagem carinha triste</string>
    <string name="cd_setaAvancar">Seta indicando avançar</string>
    <string name="btn_remove_img">Remover Imagem</string>
    <string name="warning_caixa_original">Caixa Original pode ocasionar em taxas alfadegárias.</string>
    <string name="FAQ_1">E se não entregarem meu pedido?</string>
</resources>