<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_aviao"
            android:title="@string/solicita_drawer"

            />

    </group>




    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_post"
            android:icon="@drawable/ic_solicitacao"
            android:title="@string/fazer_post_drawer" />


    </group>


    <item android:title=""></item>

    <group>
        <item
            android:id="@+id/drawer_config"
            android:icon="@drawable/ic_config"
            android:title="@string/config_drawer" />
    </group>


        <item
            android:id="@+id/drawer_suporte"
            android:icon="@drawable/ic_suporte"
            android:title="@string/suporte_drawer" />

    <item android:title=""></item>
    <item android:title=""></item>



    <group>
        <item
            android:id="@+id/drawer_sair"
            android:icon="@drawable/ic_config"
            android:title="@string/sair_drawer" />
    </group>




</menu>