<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SenhaLogin">

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_edittext"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/btn_entrar"
        android:textColor="@color/TextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaLogin" />

    <TextView
        android:id="@+id/lblEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/entrar"
        android:textColor="@color/TextColor"
        android:textSize="@dimen/TitulosMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:fontFamily="@font/fonte_padrao"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:paddingStart="16dp"
        android:textColor="@color/EditTextColor"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/bg_cursor_color"
        android:textSize="@dimen/Normal_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEntrar" />

    <TextView
        android:id="@+id/lblEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/esqueceu_senha"
        android:textColor="@color/TextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogar" />

    <TextView
        android:id="@+id/btnEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/fonte_padrao"
        android:padding="17dp"
        android:text="@string/txtOnclick_RedefinirSenha"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEsqueceuSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>