<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    tools:context=".activityEmail">


    <!--IMAGEM DA LOGO DO MEIO-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logodescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_inicio" />

    <!--FIM DA IMAGEM-->

    <!--TEXTO DE BEM VINDO-->
    <TextView
        android:id="@+id/lblBemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="@dimen/TituloMenu_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!--FIM DO TEXTO-->

    <!--TEXTO DE BEM VINDO-->

    <!--FIM DO TEXTO-->

    <!--    EDITTEXT DE PREENCHER EMAIL  -->

    <!-- EDITTEXT INSIRA TELEFONE -->

    <TextView
        android:id="@+id/lblInsiraEmail"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/lbl_insiraEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblBemvindo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/BackgroundTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:imeOptions="actionDone"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/bg_edittext"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconTint="@color/ERRO"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:errorTextColor="@color/textoErro"
        app:hintTextAppearance="@style/TextAppearance"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInsiraEmail">

        <!-- EDITTEXT CONFIRMAR SENHA-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background"
            android:fontFamily="@font/fonte_padrao"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black" />

        <!-- FIM DO EDITTEXT CONFIRMAR SENHA-->

    </com.google.android.material.textfield.TextInputLayout>

    <!--FIM DO EDIT TEXT PREENCHER EMAIL-->

    <!--BOTÃO CONTINUAR -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinuar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_perfil"
        android:fontFamily="@font/fonte_padrao"
        android:padding="20dp"
        android:text="@string/btn_continuar"
        android:textColor="@color/TextColor"
        android:textSize="@dimen/Normal_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
        tools:ignore="TextContrastCheck" />
    <!--FIM DO BOTÃO CONTINUAR-->

    <!--TEXTVIEW DE TERMOS E CONDIÇÕES-->

    <TextView
        android:id="@+id/lblTermos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fonte_padrao"
        android:text="@string/terms_conditions"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="@dimen/micro_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <!--FIM DO TEXTVIUEW DE TERMOS E CONDIÇÕES-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>