<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    tools:context=".PerfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_cantos_redondos_cima"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutDadosUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtNomeUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="169dp"
                android:layout_toStartOf="@+id/imgFotoPerfil"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/ola_teste"
                android:textSize="@dimen/TitulosMenu" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFotoPerfil"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/justin" />

            <TextView
                android:id="@+id/txtEmailUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/email_teste_perfil"
                android:textSize="@dimen/Mini_Size"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Buttons_perfil_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:showDividers="middle"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutDadosUsuario">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMeusPedidos_perfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_perfil"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/btn_pedidos_perfil"
                android:textColor="@color/TextColor" />

            <View
                android:id="@+id/spacer"
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinhasSolicitacoes_perfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_perfil"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/btn_solicitacoes_perfil"
                android:textColor="@color/TextColor"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Buttons_perfil_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:showDividers="middle"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Buttons_perfil_layout">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditarPerfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_perfil"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/btn_editar_perfil"
                android:textColor="@color/TextColor"
                android:textSize="13sp" />

            <View
                android:id="@+id/spacer2"
                android:layout_width="20dp"
                android:layout_height="0dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPagamentos_perfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_perfil"
                android:fontFamily="@font/fonte_padrao"
                android:text="@string/pagamento_perfil"
                android:textColor="@color/TextColor" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>